app/assets/stylesheets/home.css.scss
.facebook-button {
  display: block;
  font-size: 16px;
  font-weight: 400;
  height: 45px;
  margin: 20px auto 10px;
  padding: 0 30px 0 65px;
  position: relative;
  width: 290px;
  cursor: pointer;
  float: left;
  .ico {
    position: absolute;
    top: -1px;
    left: -1px;
    border: 1px solid #004d94;
    display: block;
    width: 45px;
    height: 45px;
    background: image-url('buttons/ico_facebook.png') no-repeat 0 0 #005aa7;
  }
}

.btn-blue {
  color: #fff;
  background-color: #428bca;
  border: 1px solid #0060b9;
  &:hover {
    background-color: #3276b1;
  }
  &:active {
    background-color: #0070d1;
  }
}

ul.menu {
  list-style: none;
  margin: 0 0 2em;
  padding: 0;
  float: right;
}

ul.menu li {
  display: inline;
}

.footer {
  margin-top: 0px;
}

.btn {
  border-radius: 0px !important;
}

.founder-info p {
  margin-top: 10px;
}

